--- a/css/screen.css
+++ b/css/screen.css
@@ -200,6 +200,12 @@ a:focus {
     background-color: #F8F7FC;
 }
 
+/* Gradient */
+.o-row--gradient {
+    background: linear-gradient(to bottom left, #3887F7 0%, #5051DB 100%);
+    color: #fff;
+}
+
 @media (min-width: 768px) {
     .o-row {
         padding-left: 48px;
@@ -453,19 +459,34 @@ a:focus {
     ---
     Main header of the website
 */
+.c-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .c-header__nav {
     display: none;
 }
 
 @media (min-width: 992px) {
-    .c-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    .c-header__logo,
+    .c-header__nav {
+        flex-grow: 1;
+        flex-basis: 50%;
     }
 
     .c-header__nav {
-        display: block;
+        display: flex;
+        justify-content: flex-end;
+    }
+    .c-header__nav--main {
+        flew-grow: 2;
+        justify-content: center;
+    }
+
+    .c-header__nav-nav-trigger {
+        display: none;
     }
 }
 
@@ -541,6 +562,166 @@ a:focus {
         line-height: 72px;
     }
 }
+
+/*
+    Component: CTA link
+    ---
+    Small cta link with custom animation
+*/
+.c-link-cta {
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    padding: 4px 0;
+    transition: color .175s ease-in;
+}
+
+.c-link-cta,
+.c-link-cta:visited,
+.c-link-cta:active {
+    color: #7373F5;
+}
+
+.c-link-cta::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 1px;
+    width: 100%;
+    background-color: #7373F5;
+    transform: scaleX(0.5);
+    transform-origin: left;
+    transition-property: transform background-color;
+    transition-duration: 0.175s;
+    transition-timing-function: ease-in;
+}
+
+.c-link-cta:hover {
+    color: #3E3EA8;
+}
+
+.c-link-cta:hover::after {
+    transform: scaleX(1);
+    background-color: #3E3EA8;
+}
+
+.c-link-cta--inverse,
+.c-link-cta--inverse:visited,
+.c-link-cta--inverse:active {
+    color: #FFF;
+}
+
+.c-link-cta--inverse::after, {
+    background-color: #FFF;
+}
+
+.c-link-cta--inverse:hover::after {
+    background-color: #FFF;
+}
+
+/*
+    Component: footer
+    ---
+    Main footer of the website
+*/
+.c-footer {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.c-footer__logo {
+    width: 100%;
+}
+
+.c-footer__nav {
+    width: 50%;
+}
+
+@media (min-width: 768px) {
+    .c-footer {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .c-footer__logo {
+        display: flex;
+        justify-content: center;
+        padding: 0 12px;
+    }
+
+    .c-footer__nav {
+        width: auto;
+        padding: 0 16px;
+    }
+}
+
+@media (min-width: 992px) {
+    .c-footer {
+        justify-content: space-between
+    }
+
+    .c-footer__logo {
+        width: auto;
+    }
+
+    .c-footer__logo+.c-footer__nav {
+        order: -1;
+    }
+
+    .c-footer__logo .c-logo {
+        padding-bottom: 0;
+    }
+
+    .c-footer__logo {
+        width: auto;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%)
+    }
+
+    .c-footer__nav {
+        padding: 0;
+    }
+}
+
+/*
+    Component: Title icon
+    ---
+    Special type of title with icon
+*/
+
+.c-title-icon {
+    display: flex;
+    align-items: flex-start;
+}
+
+.c-title-icon__icon {
+    height: 70px;
+    margin-right: 20px;
+}
+
+.c-title-icon__path{
+    fill: #231F20;
+}
+
+@media (min-width: 768px) {
+    .c-title-icon__icon{
+        height: 84px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .c-title-icon__icon{
+        height: 112px;
+    }
+}
+
 
 /*------------------------------------*\
   #UTILITIES
